--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@angular/core": "~10.0.2",
     "@angular/forms": "~10.0.2",
     "@angular/material": "^10.2.7",
+    "@angular/material-moment-adapter": "^7.1.0",
     "@angular/platform-browser": "~10.0.2",
     "@angular/platform-browser-dynamic": "~10.0.2",
     "@angular/router": "~10.0.2",
+    "moment": "^2.29.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
